Bug 13495 - dbchecker: Fixing up incorrect DNs wasn't working
Summary: dbchecker: Fixing up incorrect DNs wasn't working
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.8.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-29 02:47 UTC by Andrew Bartlett
Modified: 2018-07-08 19:13 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2018-06-29 02:47:47 UTC
dbcheck would fail to fix up attributes where the extended DN's GUID is
correct, but the DN itself is incorrect. The code failed attempting to
remove the old/incorrect DN

(patch under development)
Comment 1 Andrew Bartlett 2018-07-08 19:13:59 UTC
Fixed in master by 22208f52e6096fbe9413b8ff339d9446851e0874 for Samba 4.9